[tool.poetry]
name = "pytorch-tutorial"
version = "0.1.0"
description = "Concise and annotated examples for learning PyTorch"
authors = ["Baptiste Pesquet <bpesquet@gmail.com>"]
license = "MIT"
readme = "README.md"
# Use poetry  only for dependency management
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.1"
torchvision = "^0.19.1"
joblib = "^1.4.2"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
