[project]
name = "pytorch-tutorial"
version = "0.1.1"
description = "Concise and annotated examples for learning the basics of PyTorch"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    { name = "Baptiste Pesquet", email = "bpesquet@gmail.com" }
]
keywords = ["pytorch", "tutorial"]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch==2.4.1",
    "torchvision>=0.19.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
filterwarnings = [
    # Ignore a DeprecationWarning between Python 3.12 and torchvision.
    # Note the use of single quote below to denote "raw" strings in TOML
    'ignore:.* parameter is deprecated and will be removed in Pillow 13'
]
